--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.body {
+  font-size: calc(10px + 2vmin);
+  color: white; 
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
